public/index.css
html{
  display: block;
}
* {
  box-sizing: border-box;

}

button{
  cursor: pointer;
}

body{
  background-color: #000000;
  color: rgb(0, 255, 51);
}

a{
  color:rgb(0, 255, 51);
}


.popup-item{
  cursor: pointer;
}

.popup-item:hover{
  color: yellow;
}

.overlay {
  height: 100%;
  width: 0;
  position: fixed;
  z-index: 1;
  top: 0;
  left: 0;
  background-color: rgb(0,0,0);
  background-color: rgba(0,0,0, 0.9);
  overflow-x: hidden;
  transition: 0.5s;
}

.overlay-content {
  position: relative;
  top: 25%;
  width: 100%;
  text-align: center;
  margin-top: 30px;
}

.overlay a {
  padding: 8px;
  text-decoration: none;
  font-size: 36px;
  color: rgb(0, 255, 51);
  display: block;
  transition: 0.3s;
}

.overlay a:hover, .overlay a:focus, .overlay span:hover {
  color: #f1f1f1;
}

.overlay .closebtn {
  position: absolute;
  top: 20px;
  right: 45px;
  font-size: 60px;
}


@media screen and (max-height: 450px) {
  .home{
    font-size: 20px
  }
  .overlay a {font-size: 20px}
  .overlay .closebtn {
  font-size: 40px;
  top: 15px;
  right: 35px;
  }


}

.blurred{
  position: absolute;
  filter: blur(10px);
  width: 25%;
  height: auto;
  overflow-x: hidden;
}

.current{
  -webkit-box-shadow: 1px 3px 27px -9px #000000;
  box-shadow: 1px 3px 27px -9px #000000;
  width:400px;
  height: auto;
  cursor: pointer;
  overflow-x: hidden;
}

.current-blur{
  -webkit-box-shadow: 1px 3px 27px -9px #000000;
  box-shadow: 1px 3px 27px -9px #000000;
  width: 400px;
  height: auto;
  cursor: pointer;
  overflow-x: hidden;
  filter: blur(15px)
}

@media screen and (max-height: 823px) {
  .current{
    width: 360px;
  }
  .current-blur{
    width: 360px;
  }

}

.welcome-image-blur{
  border: 5px solid #555;
  width: 300px;
  height: 325px;
  filter: blur(15px);
  object-fit: cover;
  border-radius:50%;
}

.welcome-image{
  border: 5px solid #555;
  width: 300px;
  height: 320px;
  object-fit: cover;
  border-radius:50%;
}

